<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/verde_azul"
    tools:context=".MainActivity">


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="222dp"
            android:layout_height="197dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/ic_logo"
            tools:layout_marginTop="10dp" />

        <TextView
            android:id="@+id/textLogo"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/textLogo"
            android:textAlignment="center"
            android:textColor="#fff"
            android:textSize="50sp"
            app:fontFamily="sans-serif-black"
            app:layout_constraintBottom_toTopOf="@+id/Descricao"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.511"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgLogo" />

        <TextView
            android:id="@+id/Descricao"
            android:layout_width="289dp"
            android:layout_height="75dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="12dp"
            android:gravity="center"
            android:text="@string/Descricao_logo"
            android:textColor="#FFF"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/editLogin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.65"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/editLogin"
            android:layout_width="290dp"
            android:layout_height="36dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:background="#FFF"
            android:ems="10"
            android:hint="Login"
            android:inputType="textPersonName"
            android:text="@string/editLogin"
            app:layout_constraintBottom_toTopOf="@+id/editSenha"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.653"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/editSenha"
            android:layout_width="289dp"
            android:layout_height="33dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:background="#FFF"
            android:ems="10"
            android:hint="Senha"
            android:inputType="textPassword"
            android:text="@string/editSenha"
            app:layout_constraintBottom_toTopOf="@+id/btn_Entrar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.646"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btn_Entrar"
            android:layout_width="292dp"
            android:layout_height="45dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="48dp"
            android:background="#47fba4"
            android:text="@string/btn_Entrar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.64"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="251dp"
            android:layout_height="20dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/textEmail"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.609"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_Entrar"
            app:layout_constraintVertical_bias="0.578" />
    </android.support.constraint.ConstraintLayout>


</RelativeLayout>