<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity"
    android:background="@drawable/verde_azul">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/cxRes"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="124dp"
            android:background="@drawable/button_selector"
            android:padding="30dp"
            android:text="@string/cxRes"
            android:textColor="#FFF"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/cxEco"
            android:layout_width="279dp"
            android:layout_height="100dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/button_selector"
            android:padding="30dp"
            android:text="@string/cxEco"
            android:textColor="#FFF"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/cxRes"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cxCons"
            app:layout_constraintVertical_bias="0.46" />

        <Button
            android:id="@+id/cxCons"
            android:layout_width="283dp"
            android:layout_height="100dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:padding="30dp"
            android:text="@string/cxCon"
            android:textColor="#FFF"
            android:textSize="30sp"
            android:background="@drawable/button_selector"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>

</RelativeLayout>